# StdbMMO

./: .gitignore  Cargo.toml  Justfile  Makefile
bindings/: Cargo.toml
bindings/src/bindings/: mod.rs  player_position_type.rs  player_positions_table.rs  player_type.rs  player_window_type.rs  player_window_update_type.rs  players_positions_lr_table.rs  players_positions_table.rs  players_table.rs  players_window_updates_table.rs  players_windows_table.rs  update_players_windows_reducer.rs
bots/: Cargo.toml
bots/src/: main.rs
client/: Cargo.toml
client/.cargo/: config.toml
client/assets/: character.glb
client/src/: animation_link.rs  constants.rs  input.rs  load_world.rs  local_player.rs  main.rs  players.rs  remote_players.rs  server.rs  state.rs  world.rs
client/src/bindings/: mod.rs  move_player_reducer.rs  on_connected_reducer.rs  player_type.rs  players_table.rs
client/src/debug/: mod.rs  physics_gizmos.rs  player_window.rs
client/src/local_player/: animations.rs  controls.rs  mod.rs  movement_replication.rs
server/: Cargo.toml
server/src/: connections.rs  filters.rs  lib.rs  lifecycle.rs  players.rs
server/src/tables/: mod.rs  players.rs  players_positions.rs  players_windows.rs
