[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bindings = { path = "../bindings" }
avian3d = "0.3.0"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_spacetimedb = "0.5.0"
bevy_third_person_camera = "0.3.0"
leafwing-input-manager = "0.17.0"
spacetimedb-sdk = "1.1.1"
bevy_health_bar3d = { git = "https://github.com/slyedoc/bevy_health_bar3d", branch = "bevy_0.16" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
