[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bindings = { path = "../bindings" }
avian3d = "0.3.0"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
bevy-tnua = "0.24.0"
bevy-tnua-avian3d = "0.5.0"
bevy_spacetimedb = { path = "/home/julien/dev/bevy_spacetimedb/bevy_spacetimedb" }
bevy_third_person_camera = "0.3.0"
bevy_health_bar3d = { git = "https://github.com/slyedoc/bevy_health_bar3d", branch = "bevy_0.16" }
bevy_asset_loader = "0.23.0"
bevy_rich_text3d = "0.3.0"
bevy_mod_billboard = { git = "https://github.com/mcobzarenco/bevy_mod_billboard", branch = "migrate-0.16" }
leafwing-input-manager = "0.17.0"
spacetimedb-sdk = "1.1.1"
iyes_perf_ui = "0.5.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
